--- a/resources/styles/sitewide.css
+++ b/resources/styles/sitewide.css
@@ -1,13 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=PT+Serif&display=swap');
 body {
-    font-family: 'Nunito', sans-serif;;
+    font-family: 'Nunito', sans-serif;
     color: white;
     font-size: 23px;
     background: black;
     text-align: center;
+    margin-top: 7%;
 }
 
 .homeMainInfoSegment {
     margin-left: 10%;
     margin-right: 10%;
+}
+
+/******BANNERS******/
+.banner {
+    width: 100%;
+    height: 11%;
+    position: fixed;
+    left: 0;
+    z-index: 10;
+    background: #422817;
+    font-size: 53px;
+    margin: auto;
+    font-family: 'Nunito', sans-serif;
+
+
+}
+
+/******HEADER******/
+#header {
+    top: 0;
+}
+
+/******MAIN******/
+.homeMainInfoSegment {
+
+}
+
+#1 {
+
+}
+
+#2 {
+
+}
+
+#3 {
+
 }
